--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Life club MMA | INICIO</title>
     <link rel="icon" type="image/png" href="./images/logo   ">
     <link rel="stylesheet" href="./styles/styles.css">
+    <meta lang="es">
 </head>
 <body>
     <nav class="navbar">
