--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Life club MMA | INICIO</title>
+    <title>Life Club MMA | INICIO</title>
     <link rel="icon" type="image/png" href="./images/logo   ">
     <link rel="stylesheet" href="./styles/styles.css">
     <meta lang="es">
 </head>
+
 <body>
     <nav class="navbar">
+        <img class="logoNav" src="../images/logo" alt="Logo Life Club MMA" />
         <ul>
             <li>
                 <a href="./pages/store.html">Explora la colección</a>
@@ -21,18 +24,87 @@
                 <a href="./pages/about.html">Sobre nosotros</a>
             </li>
         </ul>
-        
+
     </nav>
     <div class="bg-image">
-    <div class="hero">
-        <h1>Life Club MMA</h1>
-        <p style="color: rgba(232, 230, 227, 0.9);">
-            💪 MMA, BJJ y salud mental 🔥 Entrena cuerpo, mente y espíritu
-        </p>
-        <img style="height: 150px;" src="./images/logo" alt="Logo Life club MMA">
+        <div class="hero">
+            <h1>Life Club MMA</h1>
+            <p style="color: rgba(232, 230, 227, 0.9);">
+                💪 MMA, BJJ y salud mental 🔥 Entrena cuerpo, mente y espíritu
+            </p>
+            <img style="height: 150px;" src="./images/logo" alt="Logo Life club MMA">
+        </div>
     </div>
-</div>
+    <section class="bottom">
+        <div class="about">
+            <p style="padding-top: 20px;">
+                Somos <strong>Life Club MMA</strong> un espacio seguro donde a través de la disciplina y correcta
+                enseñanza de las artes marciales buscamos empoderar a la juventud para que se convierta en un agente de
+                cambio en su comunidad.
+            </p>
+            <iframe style="border-radius: 20px;" width="600" height="355"  src="https://www.youtube.com/embed/fhQcRRi1fgg?si=qTQlnjn5yWkHDY0P"
+                title="YouTube video player" frameborder="0" allowfullscreen>
+            </iframe>
 
+        </div>
+    </section>
+    <footer>
+        <!--   Instagram logo svg  -->
+        <a href="https://www.instagram.com/lifeclub_mma/#" target="_blank">
+            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none"
+                stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <path d="M4 4m0 4a4 4 0 0 1 4 -4h8a4 4 0 0 1 4 4v8a4 4 0 0 1 -4 4h-8a4 4 0 0 1 -4 -4z" />
+                <path d="M12 12m-3 0a3 3 0 1 0 6 0a3 3 0 1 0 -6 0" />
+                <path d="M16.5 7.5l0 .01" />
+            </svg>
+        </a>
+        <!--   YT logo svg  -->
+        <a href="https://www.youtube.com/watch?v=fhQcRRi1fgg" target="_blank">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" width="40" height="40"
+                data-darkreader-inline-fill="" style="--darkreader-inline-fill: currentColor;">
+                <path
+                    d="M18 3a5 5 0 0 1 5 5v8a5 5 0 0 1 -5 5h-12a5 5 0 0 1 -5 -5v-8a5 5 0 0 1 5 -5zm-9 6v6a1 1 0 0 0 1.514 .857l5 -3a1 1 0 0 0 0 -1.714l-5 -3a1 1 0 0 0 -1.514 .857z">
+                </path>
+            </svg>
+        </a>
+
+        <!--   WhatsApp logo svg  -->
+        <a href="https://api.whatsapp.com/send?phone=34603567120" target="_blank">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                stroke-linecap="round" stroke-linejoin="round" width="40" height="40" stroke-width="2"
+                data-darkreader-inline-stroke="" style="--darkreader-inline-stroke: currentColor;">
+                <path d="M3 21l1.65 -3.8a9 9 0 1 1 3.4 2.9l-5.05 .9"></path>
+                <path
+                    d="M9 10a.5 .5 0 0 0 1 0v-1a.5 .5 0 0 0 -1 0v1a5 5 0 0 0 5 5h1a.5 .5 0 0 0 0 -1h-1a.5 .5 0 0 0 0 1">
+                </path>
+            </svg>
+        </a>
+
+        <!--   Mail logo svg  -->
+        <a href="mailto:Lifeclubmma@gmail.com" target="_blank">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                stroke-linecap="round" stroke-linejoin="round" data-darkreader-inline-stroke=""
+                style="--darkreader-inline-stroke: currentColor;" width="40" height="40" stroke-width="2">
+                <path d="M3 7a2 2 0 0 1 2 -2h14a2 2 0 0 1 2 2v10a2 2 0 0 1 -2 2h-14a2 2 0 0 1 -2 -2v-10z"></path>
+                <path d="M3 7l9 6l9 -6"></path>
+            </svg>
+        </a>
+        <!--   Maps logo svg  -->
+        <a href="https://www.google.com/maps/search/?api=1&query=Life+Club+MMA&query_place_id=ChIJCbHX3LK9pBIRstHX0PgmyDc"
+            target="_blank">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                stroke-linecap="round" stroke-linejoin="round" width="40" height="40" stroke-width="2"
+                data-darkreader-inline-stroke="" style="--darkreader-inline-stroke: currentColor;">
+                <path d="M12 9.5m-2.5 0a2.5 2.5 0 1 0 5 0a2.5 2.5 0 1 0 -5 0"></path>
+                <path d="M6.428 12.494l7.314 -9.252"></path>
+                <path d="M10.002 7.935l-2.937 -2.545"></path>
+                <path d="M17.693 6.593l-8.336 9.979"></path>
+                <path
+                    d="M17.591 6.376c.472 .907 .715 1.914 .709 2.935a7.263 7.263 0 0 1 -.72 3.18a19.085 19.085 0 0 1 -2.089 3c-.784 .933 -1.49 1.93 -2.11 2.98c-.314 .62 -.568 1.27 -.757 1.938c-.121 .36 -.277 .591 -.622 .591c-.315 0 -.463 -.136 -.626 -.593a10.595 10.595 0 0 0 -.779 -1.978a18.18 18.18 0 0 0 -1.423 -2.091c-.877 -1.184 -2.179 -2.535 -2.853 -4.071a7.077 7.077 0 0 1 -.621 -2.967a6.226 6.226 0 0 1 1.476 -4.055a6.25 6.25 0 0 1 4.811 -2.245a6.462 6.462 0 0 1 1.918 .284a6.255 6.255 0 0 1 3.686 3.092z">
+                </path>
+            </svg>
+        </a>
+    </footer>
 </body>
-</html>
 
+</html>
