--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Life Club MMA | INICIO</title>
-    <link rel="icon" type="image/png" href="./images/logo   ">
+    <link rel="icon" type="image/png" href="./images/logo.jpg   ">
     <link rel="stylesheet" href="./styles/styles.css">
     <meta lang="es">
 </head>
 
 <body>
     <nav class="navbar">
-        <img class="logoNav" src="../images/logo" alt="Logo Life Club MMA" />
+        <img class="logoNav" src="../images/logo.jpg" alt="Logo Life Club MMA" />
         <ul>
             <li>
                 <a href="./pages/store.html">Explora la colección</a>
@@ -29,14 +29,15 @@
     <div class="bg-image">
         <div class="hero">
             <h1>Life Club MMA</h1>
-            <p style="color: rgba(232, 230, 227, 0.9);">
+            <p style="color: rgba(232, 230, 227, 0.9); text-align: center;">
                 💪 MMA, BJJ y salud mental 🔥 Entrena cuerpo, mente y espíritu
             </p>
-            <img style="height: 150px;" src="./images/logo" alt="Logo Life club MMA">
+            <img style="height: 150px;" src="./images/logo.jpg" alt="Logo Life club MMA">
         </div>
     </div>
     <section class="bottom">
         <div class="about">
+            <h1>Esfuérzate y sé valiente</h1>
             <p style="padding-top: 20px;">
                 Somos <strong>Life Club MMA</strong> un espacio seguro donde a través de la disciplina y correcta
                 enseñanza de las artes marciales buscamos empoderar a la juventud para que se convierta en un agente de
