--- a/pages/about.html
+++ b/pages/about.html
@@ -76,7 +76,7 @@
         <img src="../images/franco-arriagada.jpg" alt="Imagen Franco Arriagada">
         <div class="profesorInfo">
           <h3>
-            Franco Arriagada 
+            Franco Arriagada
           </h3>
           <p>
             Instructor / Soporte Administrativo
@@ -118,6 +118,7 @@
         </div>
       </div>
     </div>
+    <a class="callToAction" href="../pages/inscripciones.html">Inscribete a nuestras clases!</a>
   </section>
   <footer style="padding-top: 5%;">
     <div class="icons">
