--- a/pages/store.html
+++ b/pages/store.html
@@ -27,7 +27,7 @@
       </ul>
     </nav>
     <div class="title">
-      <h1>Adquiere los mejores productos de MMA!</h1>
+      <h1 class="title1">Adquiere los mejores productos de MMA!</h1>
       <div class="shoppingcart">
         <!-- 2. Convertido el label en contenedor del carrito -->
         <label for="cart-toggle" class="cart-icon">
