--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
             <li>
                 <a href="./pages/about.html">Sobre nosotros</a>
             </li>
+            <li>
+                <a class="login" href="./pages/login.html">Inicia sesión!</a>
+            </li>
         </ul>
 
     </nav>
