--- a/pages/about.html
+++ b/pages/about.html
@@ -24,6 +24,9 @@
       <li>
         <a href="./inscripciones.html">Inscribete ya!</a>
       </li>
+      <li>
+        <a class="login" href="./login.html">Inicia sesión!</a>
+    </li>
     </ul>
   </nav>
   <section class="quienesSomos">
