--- a/pages/inscripciones.html
+++ b/pages/inscripciones.html
@@ -24,6 +24,9 @@
         <li>
           <a href="./about.html">Sobre nosotros</a>
         </li>
+        <li>
+            <a class="login" href="./login.html">Inicia sesión!</a>
+        </li>
       </ul>
     </nav>
     <section>
