--- a/pages/register.html
+++ b/pages/register.html
@@ -13,15 +13,15 @@
 <body>
     <section>
         <h1>Registrate!</h1>
-        <form action="login.php" method="POST">
+        <form action="../register.php" method="POST">
             <div class="input">
                 <label for="email">Dirección Email</label>
-                <input type="text" id="mail" name="mail"
+                <input type="email" id="mail" name="email"
                     placeholder="Escribe aqui tu correo electrónico" required>
             </div>
             <div class="input">
                 <label for="username">Usuario</label>
-                <input type="email" id="username" name="username"
+                <input type="text" id="username" name="username"
                     placeholder="Elije tu usuario" required>
             </div>
             <div class="input">
@@ -30,7 +30,7 @@
             </div>
             <div class="botones">
                 <button type="submit" class="boton" id="transparente">Volver al login</button>
-                <button class="boton">
+                <button class="boton" name="enviar">
                     Registrate!
                 </button>
             </div>
