--- a/pages/inscripciones.html
+++ b/pages/inscripciones.html
@@ -34,7 +34,7 @@
             Inscribete a las mejores clases de MMA!
         </h1>
         <div class="form">
-            <form action="inscripcion.php" method="post">
+            <form action="./inscripcion.php" method="post">
                 <!-- SECCIÓN DE DATOS PERSONALES -->
                 <fieldset>
                     <legend>Datos personales</legend>
