sessions.js base - falta acabar

--- a/pages/login.html
+++ b/pages/login.html
@@ -13,7 +13,7 @@
 <body>
     <section>
         <h1>Inicia sesión para comprar los mejores productos!</h1>
-        <form action="../login.php" method="POST">
+        <form action="../login.php" method="POST" id="loginForm">
             <div class="input">
                 <label for="username">Usuario o correo electrónico</label>
                 <input type="text" id="username" name="username"
@@ -38,6 +38,7 @@
             window.location.href = './register.html'
         }) 
     </script>
+      <script src="js/session.js"></script>
 </body>
 
 </html>
