--- a/pages/inscripciones.html
+++ b/pages/inscripciones.html
@@ -170,6 +170,7 @@
     </footer>
    
   <script src="../js/inscripciones.js"></script>
+  <script src="js/session.js"></script>
 
     </body>
   </html>
