--- a/pages/login.html
+++ b/pages/login.html
@@ -38,7 +38,7 @@
             window.location.href = './register.html'
         }) 
     </script>
-      <script src="js/session.js"></script>
+  <script src="../js/session.js"></script>
 </body>
 
 </html>
