--- a/pages/register.html
+++ b/pages/register.html
@@ -41,6 +41,6 @@
             window.location.href = './login.html'
         })
     </script>
-      <script src="js/session.js"></script>
+  <script src="../js/session.js"></script>
 </body>
 </html>
