--- a/pages/store.html
+++ b/pages/store.html
@@ -120,15 +120,7 @@
         />
         <div class="nameAndPrice">
           <p>Espinilleras protector Venum Kontact Negro-Oro</p>
-
-          <p style="font-weight: lighter">26,99€</p>
-        </div>
-        <!--   <p style="font-weight: lighter; padding: 0;">
-                Guantes UFC rojos - Potencia y estilo en cada golpe.
-            </p> -->
-        <div class="botones">
-          <button>Añadir al carrito</button>
-        </div>
+          <script src="js/session.js"></script>
       </div>
            
             <!--   ITEM   -->
@@ -372,6 +364,6 @@
       </div>
   </footer>
  
-  <script src="js/session.js"></script>
+  <script src="../js/session.js"></script>
   </body>
 </html>
