--- a/pages/about.html
+++ b/pages/about.html
@@ -186,7 +186,7 @@
   </footer>
 
   <script src="../js/carrusel.js"></script>
-  <script src="js/session.js"></script>
+  <script src="../js/session.js"></script>
 </body>
 
 </html>
