--- a/pages/store.html
+++ b/pages/store.html
@@ -112,16 +112,24 @@
             <!--   ITEM   -->
 
 
-      <div class="item">
-        <img
-          src="../images/espinillera.png"
-          style="height: 70%; overflow: hidden"
-          alt="Imagen Espinilleras"
-        />
-        <div class="nameAndPrice">
-          <p>Espinilleras protector Venum Kontact Negro-Oro</p>
-          <script src="js/session.js"></script>
-      </div>
+            <div class="item">
+              <img
+                src="../images/espinillera.png"
+                style="height: 65%; overflow: hidden"
+                alt="Imagen espinillera"
+              />
+              <div class="nameAndPrice">
+                <p>Espinilleras protector Venum Kontact Negro-Oro</p>
+      
+                <p style="font-weight: lighter">26,99€</p>
+              </div>
+              <!--   <p style="font-weight: lighter; padding: 0;">
+                      Guantes UFC rojos - Potencia y estilo en cada golpe.
+                  </p> -->
+              <div class="botones">
+                <button>Añadir al carrito</button>
+              </div>
+            </div>
            
             <!--   ITEM   -->
 
