--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <a href="./pages/about.html">Sobre nosotros</a>
             </li>
             <li>
-                <a class="login" href="./pages/login.html">Inicia sesión!</a>
+                <a id="loginBtn" class="login" href="./pages/login.html">Inicia sesión!</a>
             </li>
         </ul>
 
