--- a/pages/about.html
+++ b/pages/about.html
@@ -25,7 +25,7 @@
         <a href="./inscripciones.html">Inscribete ya!</a>
       </li>
       <li>
-        <a class="login" href="./login.html">Inicia sesión!</a>
+                <a id="loginBtn" class="login" href="./pages/login.html">Inicia sesión!</a>
     </li>
     </ul>
   </nav>
