--- a/pages/store.html
+++ b/pages/store.html
@@ -25,7 +25,7 @@
           <a href="./about.html">Sobre nosotros</a>
         </li>
         <li>
-          <a class="login" href="./login.html">Inicia sesión!</a>
+                <a id="loginBtn" class="login" href="./pages/login.html">Inicia sesión!</a>
       </li>
       </ul>
     </nav>
