--- a/index.html
+++ b/index.html
@@ -25,10 +25,16 @@
             </li>
             <li>
                 <a id="loginBtn" class="login" href="./pages/login.html">Inicia sesión!</a>
+				
             </li>
         </ul>
+        
 
     </nav>
+		<div id="userMenu" style="display: none; z-index:100; position: absolute; right: 100px; top: 60px;  background:rgba(89, 89, 89, 0.9)
+; padding: 8px; border-radius: 6px;">
+					<a href="#" id="logoutBtn">Cerrar sesión</a>
+				</div>
     <div class="bg-image">
         <div class="hero">
             <h1>Life Club MMA</h1>
