--- a/pages/about.html
+++ b/pages/about.html
@@ -25,10 +25,14 @@
         <a href="./inscripciones.html">Inscribete ya!</a>
       </li>
       <li>
-                <a id="loginBtn" class="login" href="./pages/login.html">Inicia sesión!</a>
+        <a id="loginBtn" class="login" href="./login.html">Inicia sesión!</a>
     </li>
     </ul>
   </nav>
+  <div id="userMenu" style="display: none; z-index:100; position: absolute; right: 100px; top: 60px;  background:rgba(89, 89, 89, 0.9)
+; padding: 8px; border-radius: 6px;">
+					<a href="#" id="logoutBtn">Cerrar sesión</a>
+				</div>
   <section class="quienesSomos">
     <h1>¿Quiénes somos?</h1>
     <div class="carrusel">
