--- a/pages/inscripciones.html
+++ b/pages/inscripciones.html
@@ -25,10 +25,15 @@
           <a href="./about.html">Sobre nosotros</a>
         </li>
         <li>
-                      <a id="loginBtn" class="login" href="./pages/login.html">Inicia sesión!</a>
+            <a id="loginBtn" class="login" href="./login.html">Inicia sesión!</a>
         </li>
       </ul>
+      
     </nav>
+    <div id="userMenu" style="display: none; z-index:100; position: absolute; right: 100px; top: 60px;  background:rgba(89, 89, 89, 0.9)
+; padding: 8px; border-radius: 6px;">
+					<a href="#" id="logoutBtn">Cerrar sesión</a>
+				</div>
     <section>
         <h1 class="title1">
             Inscribete a las mejores clases de MMA!
