--- a/pages/register.html
+++ b/pages/register.html
@@ -29,8 +29,8 @@
                 <input type="password" id="password" name="password" placeholder="••••••••" required>
             </div>
             <div class="botones">
-                <button type="submit" class="boton" id="transparente">Volver al login</button>
-                <button class="boton" name="enviar">
+                <button class="boton" id="transparente">Volver al login</button>
+                <button class="boton" name="enviar" type="submit">
                     Registrate!
                 </button>
             </div>
