--- a/pages/store.html
+++ b/pages/store.html
@@ -63,8 +63,8 @@
         <div id="cart-items">
           <p>Tu carrito está vacío</p>
         </div>
-        <form id="checkout-form">
-          <p>Aquí iría el formulario de pago cuando lo implementes</p>
+        <form id="venta-form">
+          <p class="login-info">Inicia sesión <a class="login-link" href="./login.html">aquí</a> para poder comprar</p>
         </form>
       </div>
     </div>
@@ -377,5 +377,6 @@
   </footer>
  
   <script src="../js/session.js"></script>
+  <script src="../js/shoppingCart.js"></script>
   </body>
 </html>
