--- a/pages/store.html
+++ b/pages/store.html
@@ -64,7 +64,7 @@
           <p>Tu carrito está vacío</p>
         </div>
         <form id="venta-form">
-          <p class="login-info">Inicia sesión <a class="login-link" href="./login.html">aquí</a> para poder comprar</p>
+          <p id="login-info">Inicia sesión <a class="login-link" href="./login.html">aquí</a> para poder comprar</p>
         </form>
       </div>
     </div>
