--- a/pages/store.html
+++ b/pages/store.html
@@ -59,7 +59,7 @@
         <p>Tu carrito está vacío</p>
       </div>
       <p id="login-info">Inicia sesión <a class="login-link" href="./login.html">aquí</a> para poder comprar</p>
-      <form style="display: block;" id="venta-form">
+      <form style="display: none;" id="venta-form">
         <div id="info-pago" class="info-pago">
           <label style="font-size: 1.2rem;" for="info-section">Modificar dirección de envío:</label>
           <label for="name">Nombre completo:</label>
