--- a/pages/login.html
+++ b/pages/login.html
@@ -25,7 +25,7 @@
             </div>
             <div class="botones">
 
-                <button id="loginBtn" type="submit" class="boton">Entrar</button>
+                <button id="loginButton" type="submit" class="boton">Entrar</button>
             </div>
         </form>
         
