--- a/pages/store.html
+++ b/pages/store.html
@@ -58,8 +58,8 @@
       <div id="cart-items">
         <p>Tu carrito está vacío</p>
       </div>
-      <p id="login-info">Inicia sesión <a class="login-link" href="./login.html">aquí</a> para poder comprar</p>
-      <form style="display: none;" id="venta-form">
+      <p id="loginInfo">Inicia sesión <a class="login-link" href="./login.html">aquí</a> para poder comprar</p>
+      <form style="display: none;" id="ventaForm">
         <div id="info-pago" class="info-pago">
           <label style="font-size: 1.2rem;" for="info-section">Modificar dirección de envío:</label>
           <label for="name">Nombre completo:</label>
