--- a/pages/register.html
+++ b/pages/register.html
@@ -27,6 +27,15 @@
             <div class="input">
                 <label for="password">Contraseña</label>
                 <input type="password" id="password" name="password" placeholder="••••••••" required>
+                <button type="button" id="togglePassword" class="toggle-password-register">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2.5"
+                        stroke="rgb(140, 247, 255)" width="25" height="25">
+                        <path stroke-linecap="round" stroke-linejoin="round"
+                            d="M2.036 12.322a1.012 1.012 0 0 1 0-.639C3.423 7.51 7.36 4.5 12 4.5c4.638 0 8.573 3.007 9.963 7.178.07.207.07.431 0 .639C20.577 16.49 16.64 19.5 12 19.5c-4.638 0-8.573-3.007-9.963-7.178Z" />
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M15 12a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
+                    </svg>
+
+                </button>
             </div>
             <div class="botones">
                 <button class="boton" id="transparente">Volver al login</button>
@@ -42,5 +51,6 @@
         })
     </script>
   <script src="../js/session.js"></script>
+  <script src="../js/eyePassword.js"></script>
 </body>
 </html>
