carrito finish (falta precio final)

--- a/pages/store.html
+++ b/pages/store.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <!-- 1. Añadido el checkbox para controlar la modal -->
+  <!-- checkbox para controlar la modal -->
   <input type="checkbox" id="cart-toggle" style="display: none;">
 
   <nav class="navbar">
