--- a/pages/store.html
+++ b/pages/store.html
@@ -86,7 +86,7 @@
           <h1>Resumen del pedido:</h1>
           <div class="apartado-precio">
             <h3>Subtotal: </h3>
-            <h4>0€</h4>
+            <h4 id="subtotal">0€</h4>
           </div>
           <div class="apartado-precio">
             <h3>Envío: </h3>
@@ -95,7 +95,7 @@
           <hr>
           <div class="apartado-precio">
             <h3>Total: </h3>
-            <h4>0€</h4>
+            <h4 id="total">0€</h4>
           </div>
         <button type="submit" id="submitBtn">Compra ya!</button>
         </div>
