--- a/pages/store.html
+++ b/pages/store.html
@@ -68,12 +68,12 @@
         <br>
         <label for="address">Agrega la dirección de envio:</label>
         <label style="font-size: .85rem; font-weight: 500;" for="address">Direccion 1:</label>
-        <input style="width: 80%;" type="text" name="direccion2"
+        <input style="width: 80%;" type="text" name="direccion1"
           placeholder="Calle, número, piso (ejemplo: Av. Gran Vía, 123, 4ºB)" autocomplete="street-address">
         <br>
         <br>
         <label style="font-size: .85rem; font-weight: 500;" for="address">Direccion 2:</label>
-        <input style="width: 80%;" type="text" name="direccion1"
+        <input style="width: 80%;" type="text" name="direccion2"
           placeholder="Código postal, ciudad, país (ejemplo: 08001, Barcelona, España)" autocomplete="street-address">
         <br>
         <br>
@@ -112,7 +112,7 @@
         <p style="font-weight: lighter">35€</p>
       </div>
       <div class="botones">
-        <button data-product-id="prod_SIYYtZqtmamsv4" data-price-id="price_1RNxR64Dkprid8KfGPVQvCjv">Añadir al carrito</button>
+        <button data-database-id="1" data-product-id="prod_SIYYtZqtmamsv4" data-price-id="price_1RNxR64Dkprid8KfGPVQvCjv">Añadir al carrito</button>
       </div>
     </div>
 
@@ -125,7 +125,7 @@
         <p style="font-weight: lighter">14,99€</p>
       </div>
       <div class="botones">
-        <button data-product-id="prod_SIZ9rRRYIlnTNd" data-price-id="price_1RNy0l4Dkprid8KfWp7apDS3">Añadir al carrito</button>
+        <button data-database-id="2" data-product-id="prod_SIZ9rRRYIlnTNd" data-price-id="price_1RNy0l4Dkprid8KfWp7apDS3">Añadir al carrito</button>
       </div>
     </div>
 
@@ -138,7 +138,7 @@
         <p style="font-weight: lighter">26,99€</p>
       </div>
       <div class="botones">
-        <button data-product-id="prod_SIZBed3L0zHsOR" data-price-id="price_1RNy2z4Dkprid8Kf8twNPDsp">Añadir al carrito</button>
+        <button data-database-id="3" data-product-id="prod_SIZBed3L0zHsOR" data-price-id="price_1RNy2z4Dkprid8Kf8twNPDsp">Añadir al carrito</button>
       </div>
     </div>
 
@@ -151,7 +151,7 @@
         <p style="font-weight: lighter">19,95€</p>
       </div>
       <div class="botones">
-        <button data-product-id="prod_SIZIls4thQ2aD4" data-price-id="price_1RNy9r4Dkprid8Kfy9AGu8pe">Añadir al carrito</button>
+        <button data-database-id="10" data-product-id="prod_SIZIls4thQ2aD4" data-price-id="price_1RNy9r4Dkprid8Kfy9AGu8pe">Añadir al carrito</button>
       </div>
     </div>
 
@@ -165,7 +165,7 @@
         <p style="font-weight: lighter">35€</p>
       </div>
       <div class="botones">
-        <button data-product-id="prod_SIZLBcMpmyhUnx" data-price-id="price_1RNyCX4Dkprid8KfsYl7Zktd">Añadir al carrito</button>
+        <button data-database-id="11" data-product-id="prod_SIZLBcMpmyhUnx" data-price-id="price_1RNyCX4Dkprid8KfsYl7Zktd">Añadir al carrito</button>
       </div>
     </div>
 
@@ -179,7 +179,7 @@
         <p style="font-weight: lighter">22,99€</p>
       </div>
       <div class="botones">
-        <button data-product-id="prod_SIZMtzVmHcsxlv" data-price-id="price_1RNyDv4Dkprid8KfCCJ17uiq">Añadir al carrito</button>
+        <button data-database-id="14" data-product-id="prod_SIZMtzVmHcsxlv" data-price-id="price_1RNyDv4Dkprid8KfCCJ17uiq">Añadir al carrito</button>
       </div>
     </div>
 
@@ -192,7 +192,7 @@
         <p style="font-weight: lighter">45€</p>
       </div>
       <div class="botones">
-        <button data-product-id="prod_SIZOJBuzM1VQll" data-price-id="price_1RNyFo4Dkprid8Kf3qii5u1e">Añadir al carrito</button>
+        <button data-database-id="18" data-product-id="prod_SIZOJBuzM1VQll" data-price-id="price_1RNyFo4Dkprid8Kf3qii5u1e">Añadir al carrito</button>
       </div>
     </div>
 
@@ -205,7 +205,7 @@
         <p style="font-weight: lighter">24,95€</p>
       </div>
       <div class="botones">
-        <button data-product-id="prod_SIZSla6haogAyb" data-price-id="price_1RNyJU4Dkprid8KfOnhXGPPW">Añadir al carrito</button>
+        <button data-database-id="23" data-product-id="prod_SIZSla6haogAyb" data-price-id="price_1RNyJU4Dkprid8KfOnhXGPPW">Añadir al carrito</button>
       </div>
     </div>
 
@@ -218,7 +218,7 @@
         <p style="font-weight: lighter">35€</p>
       </div>
       <div class="botones">
-        <button data-product-id="prod_SIZTakNinqxdDI" data-price-id="price_1RNyKi4Dkprid8KfI6FjnXQa">Añadir al carrito</button>
+        <button data-database-id="24" data-product-id="prod_SIZTakNinqxdDI" data-price-id="price_1RNyKi4Dkprid8KfI6FjnXQa">Añadir al carrito</button>
       </div>
     </div>
   </div>
@@ -233,7 +233,7 @@
         <p style="font-weight: lighter">34,99€</p>
       </div>
       <div class="botones">
-        <button data-product-id="prod_SIZVXBNpMEC6Py" data-price-id="price_1RNyM54Dkprid8Kf3Gl3VD7k">Añadir al carrito</button>
+        <button data-database-id="27" data-product-id="prod_SIZVXBNpMEC6Py" data-price-id="price_1RNyM54Dkprid8Kf3Gl3VD7k">Añadir al carrito</button>
       </div>
     </div>
 
@@ -246,7 +246,7 @@
         <p style="font-weight: lighter">69,95€</p>
       </div>
       <div class="botones">
-        <button data-product-id="prod_SIZWFS8KIjf8Hg" data-price-id="price_1RNyNJ4Dkprid8KfVldcVjZl">Añadir al carrito</button>
+        <button data-database-id="30" data-product-id="prod_SIZWFS8KIjf8Hg" data-price-id="price_1RNyNJ4Dkprid8KfVldcVjZl">Añadir al carrito</button>
       </div>
     </div>
   </div>
