responsive falta about

--- a/pages/register.html
+++ b/pages/register.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8" />
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../styles/login.css" />
     <link rel="icon" type="image/png" href="../images/logo.jpg" />
     <title>Registro</title>
-    <meta lang="es" />
+    <meta lang="es">
 </head>
 
 <body>
