--- a/pages/store.html
+++ b/pages/store.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <meta charset="UTF-8" />
@@ -8,7 +8,150 @@
   <link rel="icon" type="image/png" href="../images/logo.jpg" />
   <title>Compra aqui!</title>
   <script src="https://js.stripe.com/v3/"></script>
-  <meta lang="es" />
+  <meta lang="es">
+
+  <style>
+    /*ANIMACIONS AMB INTERNAL CSS*/
+
+@keyframes fadeIn {
+    from { opacity: 0; transform: translateY(20px); }
+    to { opacity: 1; transform: translateY(0); }
+}
+
+@keyframes pulse {
+    0% { transform: scale(1); }
+    50% { transform: scale(1.05); }
+    100% { transform: scale(1); }
+}
+
+@keyframes float {
+    0% { transform: translateY(0px); }
+    50% { transform: translateY(-10px); }
+    100% { transform: translateY(0px); }
+}
+
+
+@keyframes gradientBG {
+    0% { background-position: 0% 50%; }
+    50% { background-position: 100% 50%; }
+    100% { background-position: 0% 50%; }
+}
+
+/* ANIMACIONES GENERALES */
+.navbar {
+    animation: fadeIn 0.8s ease-out both;
+}
+
+.title1 {
+    animation: fadeIn 1s ease-out 0.3s both;
+}
+
+.shoppingcart {
+    animation: fadeIn 1s ease-out 0.4s both;
+}
+
+/* ANIMACIONES PARA ITEMS DE PRODUCTOS */
+.grids, .grid2 {
+    animation: fadeIn 1s ease-out 0.5s both;
+}
+
+.item {
+    transition: all 0.3s ease;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    animation: fadeIn 0.5s ease-out forwards;
+}
+
+
+.item img {
+    transition: transform 0.3s ease;
+}
+
+
+/* ANIMACIONES PARA BOTONES */
+.botones button {
+    transition: all 0.3s ease;
+    position: relative;
+    overflow: hidden;
+}
+
+.botones button::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(90deg, transparent, rgba(255,255,255,0.3), transparent);
+    transition: all 0.5s ease;
+}
+
+
+
+
+
+/* ANIMACIONES PARA EL CARRITO */
+
+
+#cart-count {
+    transition: all 0.3s ease;
+    animation: pulse 1.5s infinite;
+}
+
+.modal {
+    animation: fadeIn 0.3s ease-out;
+}
+
+.close-modal {
+    transition: all 0.3s ease;
+}
+
+.close-modal:hover {
+    transform: rotate(90deg);
+    color: #ff0000;
+}
+
+/* ANIMACIONES PARA ICONOS DE FOOTER */
+.icons a svg {
+    transition: all 0.3s ease;
+    filter: drop-shadow(0 2px 5px rgba(0,0,0,0.1));
+}
+
+
+/* ANIMACIONES PARA FORMULARIO DE PAGO */
+#info-pago input {
+    transition: all 0.3s ease;
+    border: 1px solid #ddd;
+}
+
+#info-pago input:focus {
+    border-color: #4CAF50;
+    box-shadow: 0 0 8px rgba(76, 175, 80, 0.4);
+    transform: scale(1.01);
+}
+
+#submitBtn {
+    transition: all 0.3s ease;
+    position: relative;
+    overflow: hidden;
+}
+
+/* EFECTO DE ONDA PARA EL BOTÓN DE COMPRA */
+@keyframes wave {
+    0% { transform: translateX(0); }
+    100% { transform: translateX(100%); }
+}
+
+
+/* ANIMACIÓN PARA EL FOOTER */
+footer {
+    animation: fadeIn 1s ease-out 1.2s both;
+}
+
+.rights {
+    animation: fadeIn 1s ease-out 1.5s both;
+}
+
+  </style>
 </head>
 
 <body>
