--- a/pages/about.html
+++ b/pages/about.html
@@ -8,6 +8,133 @@
   <link rel="icon" type="image/png" href="../images/logo.jpg" />
   <title>Compra aqui!</title>
   <meta lang="es">
+  <style>
+    /*ANIMACIONS AMB INTERNAL CSS*/
+    @keyframes fadeIn {
+    from { 
+        opacity: 0;
+        transform: translateY(30px);
+    }
+    to { 
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+@keyframes slideInFromLeft {
+    from { 
+        opacity: 0;
+        transform: translateX(-50px);
+    }
+    to { 
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
+@keyframes slideInFromRight {
+    from { 
+        opacity: 0;
+        transform: translateX(50px);
+    }
+    to { 
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
+@keyframes scaleIn {
+    from { 
+        opacity: 0;
+        transform: scale(0.95);
+    }
+    to { 
+        opacity: 1;
+        transform: scale(1);
+    }
+}
+
+/* APLICACIÓN DE ANIMACIONES */
+.navbar {
+    animation: fadeIn 0.8s ease-out both;
+}
+
+.quienesSomos h1 {
+    animation: fadeIn 0.8s ease-out 0.3s both;
+}
+
+.carrusel {
+    animation: slideInFromLeft 0.8s ease-out 0.4s both;
+}
+
+.team h1 {
+    animation: fadeIn 0.8s ease-out 0.5s both;
+}
+
+.profesores {
+    animation: scaleIn 0.8s ease-out 0.6s both;
+}
+
+.profesorCard:nth-child(1) {
+    animation: fadeIn 0.8s ease-out 0.7s both;
+}
+.profesorCard:nth-child(2) {
+    animation: fadeIn 0.8s ease-out 0.8s both;
+}
+.profesorCard:nth-child(3) {
+    animation: fadeIn 0.8s ease-out 0.9s both;
+}
+.profesorCard:nth-child(4) {
+    animation: fadeIn 0.8s ease-out 1.0s both;
+}
+
+.callToAction {
+    animation: slideInFromRight 0.8s ease-out 1.1s both;
+}
+
+footer {
+    animation: fadeIn 1s ease-out 1.2s both;
+}
+
+/* Animaciones escalonadas para los iconos del footer */
+.icons a:nth-child(1) svg {
+    animation: fadeIn 0.8s ease-out 1.3s both;
+}
+.icons a:nth-child(2) svg {
+    animation: fadeIn 0.8s ease-out 1.4s both;
+}
+.icons a:nth-child(3) svg {
+    animation: fadeIn 0.8s ease-out 1.5s both;
+}
+.icons a:nth-child(4) svg {
+    animation: fadeIn 0.8s ease-out 1.6s both;
+}
+.icons a:nth-child(5) svg {
+    animation: fadeIn 0.8s ease-out 1.7s both;
+}
+
+.rights {
+    animation: fadeIn 0.8s ease-out 1.8s both;
+}
+
+/* MEDIA QUERIES PARA DISPOSITIVOS MÓVILES */
+@media (max-width: 768px) {
+    /* Simplificamos animaciones en móvil para mejor rendimiento */
+    .navbar,
+    .quienesSomos h1,
+    .carrusel,
+    .team h1,
+    .profesores,
+    .profesorCard,
+    .callToAction,
+    footer,
+    .icons a svg,
+    .rights {
+        animation: fadeIn 0.6s ease-out both !important;
+        animation-delay: 0.1s !important;
+    }
+}
+  </style>
 </head>
 
 <body>
