--- a/index.html
+++ b/index.html
@@ -87,10 +87,13 @@
 
 <body>
     <nav class="navbar">
-        <img class="logoNav" src="../images/logo.jpg" alt="Logo Life Club MMA" />
+        <img style="cursor: pointer;" onclick="window.location.href='./index.html'" class="logoNav" src="../images/logo.jpg" alt="Logo Life Club MMA" />
         <ul>
             <li>
-                <a href="./pages/store.html">Explora la colección</a>
+                <a style="color: rgb(140, 247, 255);" href="./index.html">Inicio</a>
+            </li>
+            <li>
+                <a href="./pages/store.html">Catalogo</a>
             </li>
             <li>
                 <a href="./pages/inscripciones.html">Inscríbete ya!</a>
