--- a/pages/about.html
+++ b/pages/about.html
@@ -140,16 +140,19 @@ footer {
 <body>
 
   <nav class="navbar">
-    <img class="logoNav" src="../images/logo.jpg" alt="Logo Life Club MMA" />
+    <img style="cursor: pointer;"  onclick="window.location.href='../index.html'" class="logoNav" src="../images/logo.jpg" alt="Logo Life Club MMA" />
     <ul>
       <li>
         <a href="../index.html">Inicio</a>
       </li>
       <li>
-        <a href="./store.html">Explora la colección</a>
+        <a href="./store.html">Catalogo</a>
       </li>
       <li>
         <a href="./inscripciones.html">Inscribete ya!</a>
+      </li>
+      <li>
+        <a href="./about.html" style="color: rgb(140, 247, 255);">Sobre nosotros</a>
       </li>
       <li>
         <a id="loginBtn" class="login" href="./login.html">Inicia sesión!</a>
