--- a/pages/store.html
+++ b/pages/store.html
@@ -159,10 +159,13 @@ footer {
   <input type="checkbox" id="cart-toggle" style="display: none;">
 
   <nav class="navbar">
-    <img class="logoNav" src="../images/logo.jpg" alt="Logo Life Club MMA" />
+    <img style="cursor: pointer;" onclick="window.location.href='../index.html'" class="logoNav" src="../images/logo.jpg" alt="Logo Life Club MMA" />
     <ul>
       <li>
         <a href="../index.html">Inicio</a>
+      </li>
+      <li>
+        <a href="./store.html" style="color: rgb(140, 247, 255);">Catalogo</a>
       </li>
       <li>
         <a href="./inscripciones.html">Inscríbete ya!</a>
