--- a/pages/inscripciones.html
+++ b/pages/inscripciones.html
@@ -183,13 +183,16 @@
     <input type="checkbox" id="cart-toggle" style="display: none;">
 
     <nav class="navbar">
-        <img class="logoNav" src="../images/logo.jpg" alt="Logo Life Club MMA" />
+        <img style="cursor: pointer;" onclick="window.location.href='../index.html'" class="logoNav" src="../images/logo.jpg" alt="Logo Life Club MMA" />
         <ul>
             <li>
                 <a href="../index.html">Inicio</a>
             </li>
             <li>
-                <a href="./store.html">Explora la colección</a>
+                <a href="./store.html">Catalogo</a>
+            </li>
+            <li>
+                <a href="./inscripciones.html" style="color: rgb(140, 247, 255);">Inscribete ya!</a>
             </li>
             <li>
                 <a href="./about.html">Sobre nosotros</a>
