--- a/pages/login.html
+++ b/pages/login.html
@@ -11,6 +11,12 @@
 </head>
 
 <body>
+    <svg onclick="window.location.href='../index.html'" class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="white" stroke-linecap="round" stroke-linejoin="round" width="40" height="40" stroke-width="2">
+        <path d="M5 12l14 0"></path>
+        <path d="M5 12l6 6"></path>
+        <path d="M5 12l6 -6"></path>
+      </svg>
+      
     <section>
         <h1>Inicia sesión para comprar los mejores productos!</h1>
         <form action="../login.php" method="POST" id="loginForm">
