--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                 <a style="color: rgb(140, 247, 255);" href="./index.html">Inicio</a>
             </li>
             <li>
-                <a href="./pages/store.html">Catalogo</a>
+                <a href="./pages/store.html">Catálogo</a>
             </li>
             <li>
                 <a href="./pages/inscripciones.html">Inscríbete ya!</a>
