--- a/pages/store.html
+++ b/pages/store.html
@@ -165,7 +165,7 @@ footer {
         <a href="../index.html">Inicio</a>
       </li>
       <li>
-        <a href="./store.html" style="color: rgb(140, 247, 255);">Catalogo</a>
+        <a href="./store.html" style="color: rgb(140, 247, 255);">Catálogo</a>
       </li>
       <li>
         <a href="./inscripciones.html">Inscríbete ya!</a>
