--- a/pages/inscripciones.html
+++ b/pages/inscripciones.html
@@ -185,7 +185,7 @@
                 <a href="../index.html">Inicio</a>
             </li>
             <li>
-                <a href="./store.html">Catalogo</a>
+                <a href="./store.html">Catálogo</a>
             </li>
             <li>
                 <a href="./inscripciones.html" style="color: rgb(140, 247, 255);">Inscribete ya!</a>
