--- a/pages/about.html
+++ b/pages/about.html
@@ -146,7 +146,7 @@ footer {
         <a href="../index.html">Inicio</a>
       </li>
       <li>
-        <a href="./store.html">Catalogo</a>
+        <a href="./store.html">Catálogo</a>
       </li>
       <li>
         <a href="./inscripciones.html">Inscribete ya!</a>
