--- a/pages/inscripciones.html
+++ b/pages/inscripciones.html
@@ -213,7 +213,7 @@
                 <fieldset>
                     <legend>Datos personales</legend>
                     <label for="name">Nombre completo</label>
-                    <input type="text" id="name" name="name" required placeholder="Escribe aqui tu nombre completo" />
+                    <input type="text" id="name" name="name" required placeholder="Escribe aquí tu nombre completo" />
 
                     <!-- SECCIÓN DE GÉNERO -->
                     <div class="genero">
@@ -270,7 +270,7 @@
                 <fieldset>
                     <legend>Información adicional</legend>
                     <label for="comments">Información médica | Otros comentarios</label>
-                    <textarea placeholder="Añade aqui información médica relevante" name="comments" id="comments"
+                    <textarea placeholder="Añade aquí información médica relevante" name="comments" id="comments"
                         rows="4"></textarea>
                 </fieldset>
 
