--- a/pages/inscripciones.html
+++ b/pages/inscripciones.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../styles/inscripciones.css" />
     <link rel="icon" type="image/png" href="../images/logo.jpg" />
-    <title>Inscribete!</title>
+    <title>Inscríbete!</title>
     <meta lang="es">
     <style>
         /* ANIMACIONS AMB INTERNAL CSS*/
@@ -188,13 +188,13 @@
                 <a href="./store.html">Catálogo</a>
             </li>
             <li>
-                <a href="./inscripciones.html" style="color: rgb(140, 247, 255);">Inscribete ya!</a>
+                <a href="./inscripciones.html" style="color: rgb(140, 247, 255);">¡Inscríbete ya!</a>
             </li>
             <li>
                 <a href="./about.html">Sobre nosotros</a>
             </li>
             <li>
-                <a id="loginBtn" class="login" href="./login.html">Inicia sesión!</a>
+                <a id="loginBtn" class="login" href="./login.html">¡Inicia sesión!</a>
             </li>
         </ul>
 
@@ -205,7 +205,7 @@
     </div>
     <section>
         <h1 class="title1">
-            Inscribete a las mejores clases de MMA!
+            Inscríbete a las mejores clases de MMA!
         </h1>
         <div class="form">
             <form action="./inscripcion.php" method="post">
