--- a/pages/about.html
+++ b/pages/about.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="../styles/about.css" />
   <link rel="icon" type="image/png" href="../images/logo.jpg" />
-  <title>Compra aqui!</title>
+  <title>Sobre Nosotros</title>
   <meta lang="es">
   <style>
     /*ANIMACIONS AMB INTERNAL CSS*/
