--- a/pages/store.html
+++ b/pages/store.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="../styles/store.css" />
   <link rel="icon" type="image/png" href="../images/logo.jpg" />
-  <title>Compra aqui!</title>
+  <title>¡Compra aqui!</title>
   <script src="https://js.stripe.com/v3/"></script>
   <meta lang="es">
 
@@ -168,13 +168,13 @@ footer {
         <a href="./store.html" style="color: rgb(140, 247, 255);">Catálogo</a>
       </li>
       <li>
-        <a href="./inscripciones.html">Inscríbete ya!</a>
+        <a href="./inscripciones.html">¡Inscríbete ya!</a>
       </li>
       <li>
         <a href="./about.html">Sobre nosotros</a>
       </li>
       <li>
-        <a id="loginBtn" class="login" href="./login.html">Inicia sesión!</a>
+        <a id="loginBtn" class="login" href="./login.html">¡Inicia sesión!</a>
       </li>
     </ul>
   </nav>
