--- a/pages/store.html
+++ b/pages/store.html
@@ -243,7 +243,7 @@ footer {
           <h3>Total: </h3>
           <h4 id="total">0€</h4>
         </div>
-        <button type="button" id="submitBtn" style="display: none;">Compra ya!</button>
+        <button type="button" id="submitBtn" style="display: none;">¡Compra ya!</button>
       </div>
     </div>
   </div>
