--- a/pages/login.html
+++ b/pages/login.html
@@ -45,7 +45,7 @@
         </form>
 
         <button onclick="window.location.href='./register.html';" class="boton" id="registro">
-            Registrate
+            Regístrate
         </button>
     </section>
 
