--- a/pages/register.html
+++ b/pages/register.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../styles/login.css" />
     <link rel="icon" type="image/png" href="../images/logo.jpg" />
-    <title>Registrate</title>
+    <title>Regístrate</title>
     <meta lang="es">
 </head>
 
@@ -18,7 +18,7 @@
       </svg>
       
     <section>
-        <h1>Registrate!</h1>
+        <h1>¡Regístrate!</h1>
         <form action="../register.php" method="POST">
             <div class="input">
                 <label for="email">Dirección Email</label>
@@ -46,7 +46,7 @@
             <div class="botones">
                 <button class="boton" id="transparente">Volver al login</button>
                 <button class="boton" name="enviar" type="submit">
-                    Registrate!
+                    ¡Regístrate!
                 </button>
             </div>
         </form>
