--- a/pages/inscripciones.html
+++ b/pages/inscripciones.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../styles/inscripciones.css" />
     <link rel="icon" type="image/png" href="../images/logo.jpg" />
-    <title>Inscríbete!</title>
+    <title>¡Inscríbete!</title>
     <meta lang="es">
     <style>
         /* ANIMACIONS AMB INTERNAL CSS*/
