--- a/pages/about.html
+++ b/pages/about.html
@@ -155,7 +155,7 @@ footer {
         <a href="./about.html" style="color: rgb(140, 247, 255);">Sobre nosotros</a>
       </li>
       <li>
-        <a id="loginBtn" class="login" href="./login.html">Inicia sesión!</a>
+        <a id="loginBtn" class="login" href="./login.html">¡Inicia sesión!</a>
     </li>
     </ul>
   </nav>
