--- a/index.html
+++ b/index.html
@@ -152,13 +152,13 @@
                 <a href="./pages/store.html">Catálogo</a>
             </li>
             <li>
-                <a href="./pages/inscripciones.html">Inscríbete ya!</a>
+                <a href="./pages/inscripciones.html">¡Inscríbete ya!</a>
             </li>
             <li>
                 <a href="./pages/about.html">Sobre nosotros</a>
             </li>
             <li>
-                <a id="loginBtn" class="login" href="./pages/login.html">Inicia sesión!</a>
+                <a id="loginBtn" class="login" href="./pages/login.html">¡Inicia sesión!</a>
 
             </li>
         </ul>
