--- a/pages/inscripciones.html
+++ b/pages/inscripciones.html
@@ -346,6 +346,7 @@
 
     <script src="../js/inscripciones.js"></script>
     <script src="../js/session.js"></script>
+      <script src="../js/cookieManager.js" defer></script>
 
 </body>
 
