--- a/pages/about.html
+++ b/pages/about.html
@@ -321,6 +321,7 @@ footer {
 
   <script src="../js/carrusel.js"></script>
   <script src="../js/session.js"></script>
+  <script src="../js/cookieManager.js" defer></script>
 </body>
 
 </html>
