--- a/pages/store.html
+++ b/pages/store.html
@@ -460,5 +460,6 @@ footer {
   
   <script src="../js/session.js"></script>
   <script src="../js/shoppingCart.js"></script>
+    <script src="../js/cookieManager.js" defer></script>
 </body>
 </html>
